Removed highly correlated features
Test data = 20%

--- a/parkinsons.ipynb
+++ b/parkinsons.ipynb
@@ -273,6 +273,9 @@
     "# remove constant columns\r\n",
     "parkinsons_df_noconstant = parkinsons_df.loc[:, (parkinsons_df != parkinsons_df.iloc[0]).any()]\r\n",
     "\r\n",
+    "# remove highly correlated features\r\n",
+    "parkinsons_nocorr_df = parkinsons_df_noconstant.corr(method = \"pearson\").abs()\r\n",
+    "\r\n",
     "# count of label 0 and 1 -> (147 label 1, 48 label 0)\r\n",
     "print(labels[labels==1].shape[0], labels[labels==0].shape[0])\r\n",
     "# number of columns\r\n",
@@ -327,17 +330,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "source": [
     "# generate train/test split by keeping 20% of data as test set\r\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.1, random_state = 7)"
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2, random_state = 7)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "source": [
     "# evaluate train/test split using histogram\r\n",
     "fig, (ax1, ax2) = plt.subplots(2, figsize=(10,5), sharex = True, gridspec_kw={'hspace': 0})\r\n",
@@ -398,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "source": [
     "# initialise the XGBCLassifier and train the model on training data\r\n",
     "model = XGBClassifier()\r\n",
@@ -411,7 +414,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[01:23:36] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.4.0/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[01:50:34] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.4.0/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
       "Model Training Complete\n"
      ]
     },
@@ -428,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "source": [
     "# generate predictions for training and testing data\r\n",
     "train_predict = model.predict(x_train)  # training data\r\n",
@@ -442,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "source": [
     "# calculate the accuracy of the model \r\n",
     "print(accuracy_score(y_test, test_predict) *100)"
@@ -467,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "source": [
     "# generate a no skill prediction (majority class)\r\n",
     "random_probs = [0 for _ in range(len(y_test))]\r\n",
