--- a/parkinsons.ipynb
+++ b/parkinsons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "source": [
     "import os, sys                       # OS stands for Operating System and provides ways for python to interact with files or directories\r\n",
     "from collections import Counter  # Collections is a package for handling data\r\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "source": [
     "# load the data\r\n",
     "parkinsons_original = pd.read_csv('parkinsonsdata.csv')\r\n",
@@ -240,7 +240,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 16
     }
    ],
    "metadata": {}
@@ -255,13 +255,8 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "source": [
     "# remove column name\r\n",
     "parkinsons_df = parkinsons_original.drop(\"name\", axis = 1)\r\n",
@@ -275,6 +270,13 @@
     "\r\n",
     "# remove highly correlated features\r\n",
     "parkinsons_nocorr_df = parkinsons_df_noconstant.corr(method = \"pearson\").abs()\r\n",
+    "\r\n",
+    "# filter the features with correlation coefficients above 0.95\r\n",
+    "upper = parkinsons_nocorr_df.where(np.triu(np.ones(parkinsons_nocorr_df.shape), k=1).astype(bool))\r\n",
+    "to_drop = [column for column in upper.columns if any(upper[column] > 0.95)]\r\n",
+    "parkinsons_df_lowcorr = parkinsons_df_noconstant.drop(columns=to_drop)\r\n",
+    "# recalculate the correlation matrix so we can compare\r\n",
+    "parkinsons_corr_df_update = parkinsons_df_lowcorr.corr(method=\"pearson\").abs()\r\n",
     "\r\n",
     "# count of label 0 and 1 -> (147 label 1, 48 label 0)\r\n",
     "print(labels[labels==1].shape[0], labels[labels==0].shape[0])\r\n",
@@ -297,17 +299,16 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 17
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "source": [
     "# normalize the features\r\n",
-    "\r\n",
     "# initialise MinMaxScaler with scaling range of -1 to 1.\r\n",
     "scale = MinMaxScaler((-1,1))\r\n",
     "x = scale.fit_transform(features)\r\n",
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "source": [
     "# generate train/test split by keeping 20% of data as test set\r\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2, random_state = 7)"
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "source": [
     "# evaluate train/test split using histogram\r\n",
     "fig, (ax1, ax2) = plt.subplots(2, figsize=(10,5), sharex = True, gridspec_kw={'hspace': 0})\r\n",
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "source": [
     "# initialise the XGBCLassifier and train the model on training data\r\n",
     "model = XGBClassifier()\r\n",
@@ -414,7 +415,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[01:50:34] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.4.0/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[02:51:49] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.4.0/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
       "Model Training Complete\n"
      ]
     },
@@ -431,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "source": [
     "# generate predictions for training and testing data\r\n",
     "train_predict = model.predict(x_train)  # training data\r\n",
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "source": [
     "# calculate the accuracy of the model \r\n",
     "print(accuracy_score(y_test, test_predict) *100)"
@@ -470,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "source": [
     "# generate a no skill prediction (majority class)\r\n",
     "random_probs = [0 for _ in range(len(y_test))]\r\n",
