--- a/parkinsons.ipynb
+++ b/parkinsons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "source": [
     "import os, sys                       # OS stands for Operating System and provides ways for python to interact with files or directories\r\n",
     "from collections import Counter  # Collections is a package for handling data\r\n",
@@ -19,6 +19,8 @@
     "from sklearn.model_selection import train_test_split\r\n",
     "from sklearn.metrics import accuracy_score \r\n",
     "from sklearn import metrics\r\n",
+    "from sklearn.model_selection import cross_validate, GridSearchCV, ParameterGrid\r\n",
+    "from sklearn.model_selection import KFold, RepeatedKFold\r\n",
     "\r\n",
     "from xgboost import XGBClassifier # Extreme gradient boosting based on decision trees\r\n",
     "\r\n",
@@ -521,6 +523,104 @@
      }
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Improving the Model by Optimizing Hyperparameters"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "source": [
+    "# get the default parameters used\r\n",
+    "print('Default model uses the following hyperparameters: \\n')\r\n",
+    "pprint(model.get_params())"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Default model uses the following hyperparameters: \n",
+      "\n",
+      "{'base_score': 0.5,\n",
+      " 'booster': 'gbtree',\n",
+      " 'colsample_bylevel': 1,\n",
+      " 'colsample_bynode': 1,\n",
+      " 'colsample_bytree': 1,\n",
+      " 'gamma': 0,\n",
+      " 'gpu_id': -1,\n",
+      " 'importance_type': 'gain',\n",
+      " 'interaction_constraints': '',\n",
+      " 'learning_rate': 0.300000012,\n",
+      " 'max_delta_step': 0,\n",
+      " 'max_depth': 6,\n",
+      " 'min_child_weight': 1,\n",
+      " 'missing': nan,\n",
+      " 'monotone_constraints': '()',\n",
+      " 'n_estimators': 100,\n",
+      " 'n_jobs': 8,\n",
+      " 'num_parallel_tree': 1,\n",
+      " 'objective': 'binary:logistic',\n",
+      " 'random_state': 0,\n",
+      " 'reg_alpha': 0,\n",
+      " 'reg_lambda': 1,\n",
+      " 'scale_pos_weight': 1,\n",
+      " 'subsample': 1,\n",
+      " 'tree_method': 'exact',\n",
+      " 'use_label_encoder': True,\n",
+      " 'validate_parameters': 1,\n",
+      " 'verbosity': None}\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# set up hyperparamater grid\r\n",
+    "    # a dictionary of hyperparametere candidates that we want the optimization strategy to consider\r\n",
+    "#number_of_trees \r\n",
+    " #opt_dict = {'n_estimators': number_of_trees, }"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Set up a Cross Validation Scheme"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "source": [
+    "# in total = 25 splits generated in the training data\r\n",
+    "kfold = RepeatedKFold(n_splits = 5, random_state = seed, n_repeats= 5)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Set up a Grid Search"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
