--- a/parkinsons.ipynb
+++ b/parkinsons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import os, sys                       # OS stands for Operating System and provides ways for python to interact with files or directories\r\n",
     "from collections import Counter  # Collections is a package for handling data\r\n",
@@ -15,6 +15,7 @@
     "import matplotlib.pyplot as plt\r\n",
     "import seaborn as sns            # Seaborn is a Python data visualization library based on matplotlib\r\n",
     "\r\n",
+    "\r\n",
     "from sklearn.preprocessing import MinMaxScaler # Scikit-learn is a machine learning package, providing the backbone for the work we'll perform\r\n",
     "from sklearn.model_selection import train_test_split\r\n",
     "from sklearn.metrics import accuracy_score \r\n",
@@ -23,7 +24,6 @@
     "from sklearn.model_selection import KFold, RepeatedKFold\r\n",
     "\r\n",
     "from xgboost import XGBClassifier # Extreme gradient boosting based on decision trees\r\n",
-    "from xgboost import cv\r\n",
     "import xgboost as xgb\r\n",
     "\r\n",
     "seed = 12345"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "# load the data\r\n",
     "parkinsons_original = pd.read_csv('parkinsonsdata.csv')\r\n",
@@ -244,7 +244,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 3
     }
    ],
    "metadata": {}
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "source": [
     "# remove column name\r\n",
     "parkinsons_df = parkinsons_original.drop(\"name\", axis = 1)\r\n",
@@ -303,14 +303,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "source": [
     "# normalize the features\r\n",
     "# initialise MinMaxScaler with scaling range of -1 to 1.\r\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "source": [
     "# generate train/test split by keeping 20% of data as test set\r\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2, random_state = 7)"
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "source": [
     "# evaluate train/test split using histogram\r\n",
     "fig, (ax1, ax2) = plt.subplots(2, figsize=(10,5), sharex = True, gridspec_kw={'hspace': 0})\r\n",
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "source": [
     "# initialise the XGBCLassifier and train the model on training data\r\n",
     "model = XGBClassifier()\r\n",
@@ -417,18 +417,18 @@
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[05:00:10] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.4.0/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "Model Training Complete\n"
-     ]
-    },
-    {
-     "output_type": "stream",
      "name": "stderr",
      "text": [
       "C:\\Users\\kinja\\Python\\Python39\\lib\\site-packages\\xgboost\\sklearn.py:1146: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
       "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[18:41:45] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.4.0/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "Model Training Complete\n"
      ]
     }
    ],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "source": [
     "# generate predictions for training and testing data\r\n",
     "train_predict = model.predict(x_train)  # training data\r\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "source": [
     "# calculate the accuracy of the model \r\n",
     "print(accuracy_score(y_test, test_predict) *100)"
@@ -468,11 +468,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "source": [
     "# feature importance\r\n",
     "xgb.plot_importance(model)\r\n",
-    "plt.figure(figsize=(16,12))\r\n",
+    "#plt.figure(figsize=(50,50))\r\n",
     "plt.show()"
    ],
    "outputs": [
@@ -487,15 +487,6 @@
      "metadata": {
       "needs_background": "light"
      }
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "<Figure size 1152x864 with 0 Axes>"
-      ]
-     },
-     "metadata": {}
     }
    ],
    "metadata": {}
@@ -509,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "source": [
     "# generate a no skill prediction (majority class)\r\n",
     "random_probs = [0 for _ in range(len(y_test))]\r\n",
@@ -570,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "source": [
     "# get the default parameters used\r\n",
     "print('Default model uses the following hyperparameters: \\n')\r\n",
@@ -618,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "source": [
     "# build DMatrices to use the native API for XGBoost\r\n",
     "dtrain = xgb.DMatrix(x_train, label=y_train)\r\n",
@@ -635,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "source": [
     "# tuning max_depth and min_child_weight\r\n",
     "    # to find a good trade-off between model bias and variance\r\n",
